--- a/templates/add_reminder.html
+++ b/templates/add_reminder.html
@@ -26,7 +26,7 @@
                     <div class="mb-3">
                         <label class="form-label">Deadline <span class="text-danger">*</span></label>
                         <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline"
-                               required>
+                               required placeholder="{{ today_date|date:'Y-m-d H:i' }}">
                     </div>
                     <div class="mb-3"><span class="text-danger">These fields are required.</span></div>
                     <div class="row">
