--- a/templates/edit_reminder.html
+++ b/templates/edit_reminder.html
@@ -25,7 +25,8 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Deadline <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline" required>
+                    <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline" required
+                        placeholder="{{ reminder.deadline|date:'Y-m-d H:i' }}">
                 </div>
                 <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
                 <div class="text-right">
