--- a/templates/register.html
+++ b/templates/register.html
@@ -14,14 +14,14 @@
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_username">Username</label>
                             <input type="text" id="id_username" name="username" class="form-control form-control-lg"
-                                   placeholder="Enter username" />
+                                   placeholder="e.g. johndoe"/>
                         </div>
 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_email">Email address</label>
                             <input type="email" id="id_email" name="email" class="form-control form-control-lg"
-                                   placeholder="Enter email address" />
+                                   placeholder="e.g. johndoe@gmail.com" />
                         </div>
 
                         <!-- Password input -->
@@ -42,14 +42,14 @@
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_name">Name</label>
                             <input type="text" id="id_name" name="name" class="form-control form-control-lg"
-                                   placeholder="Enter name" />
+                                   placeholder="e.g. John" />
                         </div>
 
                         <!-- Surname input -->
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_surname">Surname</label>
                             <input type="text" id="id_surname" name="surname" class="form-control form-control-lg"
-                                   placeholder="Enter surname" />
+                                   placeholder="e.g. Doe" />
                         </div>
 
                         <div class="text-center text-lg-start my-4 py-2">
