Added background image for home page

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,11 @@
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <h1 class="mb-3">Login to your account</h1>
                     {% if messages %}
-                    <div class="alert alert-danger">
-                        <ul>
-                            {% for message in messages %}
-                            <li>{{ message }}</li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+                        {% for message in messages %}
+                            <div class="alert {% if message.tags == 'success' %}alert-success{% elif message.tags == 'error' %}alert-danger{% endif %}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
                     {% endif %}
                     <form method="post">
                         {% csrf_token %}
