--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -125,9 +126,12 @@
 </style>
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg navcolor text-white">
     <div class="container">
-        <a class="navbar-brand text-white" href="/">Study Companion</a>
+        <a class="navbar-brand text-white" href="/">
+            <i class="fas fa-graduation-cap"></i> Study Companion
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -147,9 +151,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/reminders/">Reminders</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin/">{{ user.username }}</a>
-                    </li>
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="/admin/">{{ user.username }}</a>#}
+{#                    </li>#}
                     <li class="nav-item">
                         <a class="nav-link" href="/logout/">Logout</a>
                     </li>
